updated UI to material UI

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
     "@tailwindcss/typography": "^0.5.16",
-    "marked": "^16.1.2",
+    "marked": "^16.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
